--- a/Plugin_ClassicInventory.vcxproj.filters
+++ b/Plugin_ClassicInventory.vcxproj.filters
@@ -191,5 +191,7 @@
     <None Include="scripts\Plugin_ClassicInventory.trg" />
     <None Include="Plugin_ClassicInventory.aps" />
     <None Include=".gitignore" />
+    <None Include="Plugin_ClassicInventory.sln.DotSettings" />
+    <None Include="src\LICENSE.md" />
   </ItemGroup>
 </Project>
