Update documentation and license

--- a/Plugin_ClassicInventory.vcxproj.filters
+++ b/Plugin_ClassicInventory.vcxproj.filters
@@ -192,7 +192,6 @@
     <None Include="Plugin_ClassicInventory.aps" />
     <None Include=".gitignore" />
     <None Include="Plugin_ClassicInventory.sln.DotSettings" />
-    <None Include="build\beta_recording.txt" />
-    <None Include="src\LICENSE.md" />
+    <None Include="src\LICENSE" />
   </ItemGroup>
 </Project>
