--- a/Plugin_ClassicInventory.vcxproj.filters
+++ b/Plugin_ClassicInventory.vcxproj.filters
@@ -193,5 +193,7 @@
     <None Include=".gitignore" />
     <None Include="Plugin_ClassicInventory.sln.DotSettings" />
     <None Include="src\LICENSE" />
+    <None Include="scripts\Plugin_ClassicInventory.btn" />
+    <None Include="scripts\Plugin_ClassicInventory.txt" />
   </ItemGroup>
 </Project>
