--- a/Plugin_ClassicInventory.vcxproj.filters
+++ b/Plugin_ClassicInventory.vcxproj.filters
@@ -202,5 +202,10 @@
     <None Include="Plugin_ClassicInventory.props" />
     <None Include="dist\Plugin_ClassicInventory.zip" />
     <None Include="scripts\Plugin_ClassicInventory.txt" />
+    <None Include="docs\Changelog.txt" />
+    <None Include="docs\Plugin_ClassicInventory.txt" />
+    <None Include="resources\Plugin_ClassicInventory.jpg">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
